infra/modules/eks_core/demo.tf
resource "aws_security_group" "add_sg_eks" {
  name   = "additional-eks-sg"
  vpc_id = module.vpc.vpc_id
  ingress {
    description = "HTTPS from bastion host"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    security_groups = [aws_security_group.bastion_sg.id]
  }


  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "additional-eks-sg"
  }
}



module "eks" {
  source  = "terraform-aws-modules/eks/aws"
  version = "~> 21.0"

  name               = "${var.env}-${var.project_name}-eks"
  kubernetes_version = var.cluster_version

  addons = {
    coredns = {
      most_recent = true
    }

    kube-proxy = {
      most_recent = true
    }
    vpc-cni = {
      before_compute = true
      most_recent = true
    }
  }

  # Optional
  endpoint_public_access = true
  

  # Optional: Adds the current caller identity as an administrator via cluster access entry
  enable_cluster_creator_admin_permissions = true
  enable_irsa = var.enable_irsa


  vpc_id     = var.vpc_id
  subnet_ids = var.private_subnet_ids

    eks_managed_node_groups = {
    for name, ng in var.node_groups :
    name => {
      ami_type       = "AL2023_x86_64_STANDARD"
      instance_types = [ng.node_instance_type]

      desired_size = ng.desired_size
      min_size     = ng.min_size
      max_size     = ng.max_size
    }
  }
  
 


  tags = var.tags
}
